...

  useEffect(() => {
    setTotal(Calculate(transactions));
  }, [transactions]);

  return (
    <SafeAreaView style={Styles.Container} testID="home">
      <View style={Styles.Align}>
        <Budget testID="app-icon" height={120} width={120} />
        <Text testID="balance" style={Styles.Balance}>
          {Money(total || 0)}
        </Text>
        <Text testID="balance-message" style={Styles.Info}>
...
